infra/k8s/comments-depl.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: comments-depl

spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments-depl
          image: p2arthur/comments
---
apiVersion: v1
kind: Service
metadata:
  name: comments-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4002
      targetPort: 4002
