infra/k8s/eventbus-depl.yaml
apiVersion: apps/v1

kind: Deployment

metadata:

  name: eventbus-depl

spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventbus
  template:
    metadata:
      labels:
        app: eventbus
    spec:
      containers:
      - name: posts
        image: p2arthur/blog-eventbus:0.0.2
---
apiVersion: v1
kind: Service
metadata:
  name: eventbus-srv
spec:
  type: ClusterIP
  selector:
    app: eventbus
  ports:
    - name: eventbus
      protocol: TCP
      port: 4005
      targetPort: 4005
